--- a/src/dashboard/templates/payments_tenant.html
+++ b/src/dashboard/templates/payments_tenant.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load formatting %}
 
 {% block title %}My Payments{% endblock %}
 
@@ -23,6 +24,8 @@
                   <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Water</th>
                   <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Gas</th>
                   <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Other</th>
+                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Tax rate (%)</th>
+                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Tax</th>
                   <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Total</th>
                   <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Status</th>
                   <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Due date</th>
@@ -31,13 +34,15 @@
               <tbody>
                 {% for p in payments %}
                 <tr>
-                  <td><span class="text-xs font-weight-bold">{{ p.base_rent }}</span></td>
-                  <td><span class="text-xs font-weight-bold">{{ p.coop_fee }}</span></td>
-                  <td><span class="text-xs font-weight-bold">{{ p.electricity }}</span></td>
-                  <td><span class="text-xs font-weight-bold">{{ p.water }}</span></td>
-                  <td><span class="text-xs font-weight-bold">{{ p.gas }}</span></td>
-                  <td><span class="text-xs font-weight-bold">{{ p.other_fees }}</span></td>
-                  <td><span class="text-xs font-weight-bold">{{ p.total_amount }}</span></td>
+                  <td><span class="text-xs font-weight-bold">{{ p.base_rent|two_dec }}</span></td>
+                  <td><span class="text-xs font-weight-bold">{{ p.coop_fee|two_dec }}</span></td>
+                  <td><span class="text-xs font-weight-bold">{{ p.electricity|two_dec }}</span></td>
+                  <td><span class="text-xs font-weight-bold">{{ p.water|two_dec }}</span></td>
+                  <td><span class="text-xs font-weight-bold">{{ p.gas|two_dec }}</span></td>
+                  <td><span class="text-xs font-weight-bold">{{ p.other_fees|two_dec }}</span></td>
+                  <td><span class="text-xs font-weight-bold">{{ p.tax_rate_display }}</span></td>
+                  <td><span class="text-xs font-weight-bold">{{ p.tax_amount|two_dec }}</span></td>
+                  <td><span class="text-xs font-weight-bold">{{ p.total_amount|two_dec }}</span></td>
                   <td>
                     {% if p.status == 1 %}
                       <span class="badge badge-sm bg-gradient-secondary">Pending</span>
