--- a/src/users/templates/sign-up.html
+++ b/src/users/templates/sign-up.html
@@ -1,19 +1,19 @@
 {% extends 'base.html' %}
-{% load static %}
+{% load static i18n %}
 
-{% block title %}Sign Up - Property Management System{% endblock %}
+{% block title %}{% trans 'Sign Up' %} - {% trans 'Property Management System' %}{% endblock %}
 
 {% block body_class %}{% endblock %}
 
 {% block content %}
 <section class="min-vh-100 mb-8">
-  <div class="page-header align-items-start min-vh-50 pt-5 pb-11 m-3 border-radius-lg" style="background-image: url('{% static "core/img/curved-images/curved14.jpg" %}');">
+  <div class="page-header align-items-start min-vh-50 pt-5 pb-11 m-3 border-radius-lg" style="background-image: url('{% static 'core/img/curved-images/curved14.jpg' %}');">
     <span class="mask bg-gradient-dark opacity-6"></span>
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-5 text-center mx-auto">
-          <h1 class="text-white mb-2 mt-5">Welcome!</h1>
-          <p class="text-lead text-white">Use these awesome forms to login or create new account in your project for free.</p>
+          <h1 class="text-white mb-2 mt-5">{% trans 'Welcome!' %}</h1>
+          <p class="text-lead text-white">{% trans 'Use these awesome forms to login or create new account in your project for free.' %}</p>
         </div>
       </div>
     </div>
@@ -75,7 +75,7 @@
             <form role="form text-left" method="POST">
               {% csrf_token %}
               <div class="mb-3">
-                <input type="email" name="email" class="form-control {% if form.email.errors %}is-invalid{% endif %}" placeholder="Email" aria-label="Email" aria-describedby="email-addon">
+                <input type="email" name="email" class="form-control {% if form.email.errors %}is-invalid{% endif %}" placeholder="{% trans 'Email' %}" aria-label="{% trans 'Email' %}" aria-describedby="email-addon">
                 {% if form.email.errors %}
                   <div class="text-danger mt-1 small">
                     {% for error in form.email.errors %}
@@ -85,7 +85,7 @@
                 {% endif %}
               </div>
               <div class="mb-3">
-                <input type="password" name="password1" class="form-control {% if form.password1.errors %}is-invalid{% endif %}" placeholder="Password" aria-label="Password" aria-describedby="password-addon">
+                <input type="password" name="password1" class="form-control {% if form.password1.errors %}is-invalid{% endif %}" placeholder="{% trans 'Password' %}" aria-label="{% trans 'Password' %}" aria-describedby="password-addon">
                 {% if form.password1.errors %}
                   <div class="text-danger mt-1 small">
                     {% for error in form.password1.errors %}
@@ -95,7 +95,7 @@
                 {% endif %}
               </div>
               <div class="mb-3">
-                <input type="password" name="password2" class="form-control {% if form.password2.errors %}is-invalid{% endif %}" placeholder="Confirm Password" aria-label="Confirm Password" aria-describedby="password-addon">
+                <input type="password" name="password2" class="form-control {% if form.password2.errors %}is-invalid{% endif %}" placeholder="{% trans 'Confirm Password' %}" aria-label="{% trans 'Confirm Password' %}" aria-describedby="password-addon">
                 {% if form.password2.errors %}
                   <div class="text-danger mt-1 small">
                     {% for error in form.password2.errors %}
@@ -116,21 +116,21 @@
               <div class="form-check form-check-info text-left">
                 <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" checked>
                 <label class="form-check-label" for="flexCheckDefault">
-                  I agree the <a href="javascript:;" class="text-dark font-weight-bolder">Terms and Conditions</a>
+                  {% trans 'I agree the' %} <a href="javascript:;" class="text-dark font-weight-bolder">{% trans 'Terms and Conditions' %}</a>
                 </label>
               </div>
               <!--Landlord checkbox-->
               <div class="form-check form-check-info text-left mb-3">
                 <input class="form-check-input" type="checkbox" name="is_landlord" id="id_is_landlord">
                 <label class="form-check-label" for="id_is_landlord">
-                  I want to register as a Landlord
+                  {% trans 'I want to register as a Landlord' %}
                 </label>
               </div>
 
               <div class="text-center">
-                <button type="submit" class="btn bg-gradient-dark w-100 my-4 mb-2">Sign up</button>
+                <button type="submit" class="btn bg-gradient-dark w-100 my-4 mb-2">{% trans 'Sign up' %}</button>
               </div>
-              <p class="text-sm mt-3 mb-0">Already have an account? <a href="{% url 'login' %}" class="text-dark font-weight-bolder">Sign in</a></p>
+              <p class="text-sm mt-3 mb-0">{% trans 'Already have an account?' %} <a href="{% url 'login' %}" class="text-dark font-weight-bolder">{% trans 'Sign in' %}</a></p>
             </form>
           </div>
           <!-- End of Register Form -->
